--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
               <div class="card" id="cardone">
                     <div class="card-image waves-effect waves-block waves-light">
-                      <img class="NYFA" src="images/NYFA.JPG">
+                      <img class="NYFA" src="./images/NYFA.jpg">
                     </div>
                     <div class="card-content">
                       <span class="card-title activator grey-text text-darken-4">New York Film Academy<i class="material-icons right">></i></span>
@@ -88,7 +88,7 @@
                         </div>
                         <div class="card" id="cardone">
                             <div class="card-image waves-effect waves-block waves-light">
-                              <img class="Hawaii" src="images/logo.png" width="150px" height="400px">
+                              <img class="Hawaii" src="./images/Logo.png" width="150px" height="400px">
                             </div>
                             <div class="card-content">
                               <span class="card-title activator grey-text text-darken-4">General Assembly, NEW YORK<i class="material-icons right">></i></span>
